Minor branding change

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>paint</title>
-    <meta name="description" content="simple online paint application">
+    <title>Sketch</title>
+    <meta name="description" content="simple online sketching application">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="css/main.css">
     <script src="js/vendor/modernizr-2.6.1.min.js"></script>
@@ -14,7 +14,7 @@
          chromium.org/developers/how-tos/chrome-frame-getting-started -->
     <!--[if lt IE 7]><p class="chromeframe">Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
     <header>
-        <h1><a href="">sketch</a></h1>
+        <h1><a href="">Sketch</a></h1>
         <div class="tools">
             <label>
                 Mode:
